--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <h1>شركات التأمين</h1>
     <div class="cards-wrab">
-      <a href="https://percent-calculatorr.netlify.app" class="card button">
+      <a href="https://percent-calc.pages.dev/" class="card button">
         حاسبة النسبة
       </a>
 
