--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         class="card trigger"
       >
         <p class="company-name">ميد شيلد</p>
-        <span class="ind"></span>
+        <span class="ind stop"></span>
       </div>
 
       <div
@@ -197,7 +197,7 @@
         class="card trigger"
       >
         <p class="company-name">هانز للدهانات</p>
-        <span class="ind"></span>
+        <span class="ind stop"></span>
       </div>
 
       <div
@@ -221,7 +221,7 @@
         class="card trigger"
       >
         <p class="company-name">وان كير</p>
-        <span class="ind"></span>
+        <span class="ind stop"></span>
         
       </div>
     </div>
