--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         class="card trigger"
       >
         <p class="company-name">فيوتشر</p>
-        <span class="btn-link ind stop" link="https://nicedeer.net/Account/Login">
+        <span class="btn-link ind link="https://nicedeer.net/Account/Login">
           
         </span> <!--span link-->
        
