percentage calc now integrated with main app

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
 
-      <a href="https://percent-calc.pages.dev/" class="card button">
+      <a href="percentage-calculator/index.html" class="card button">
         حاسبة النسبة
       </a>
 
