some code enforcement

--- a/percentage-calculator/index.html
+++ b/percentage-calculator/index.html
@@ -54,14 +54,16 @@
               autocomplete="off"
             />
           </label>
-          <button id="calcBt" type="button">احسب</button>
+          <button class="special-font-clr" id="calcBt" type="button">
+            احسب
+          </button>
         </div>
         <div class="output">
           <button id="deleteBt" type="reset">امسح</button>
           <label>
             <input
               type="number"
-              class="result red"
+              class="result special-font-clr"
               placeholder="المطلوب من العميل"
               id="agentResult"
               value=""
@@ -71,7 +73,7 @@
           <label>
             <input
               type="number"
-              class="result red"
+              class="result special-font-clr"
               placeholder="قيمة التبديل للعميل"
               id="exchangeAmount"
               value=""
