--- a/percentage-calculator/index.html
+++ b/percentage-calculator/index.html
@@ -14,7 +14,10 @@
   <body>
     <div class="calc-container">
       <div class="top-buttons">
-        <button onclick="window.history.back();" class="back-btn">
+        <button
+          onclick="parent.location='https://dr-emad.pages.dev/'"
+          class="back-btn"
+        >
           <span class="gg-arrow-left"></span>
         </button>
         <div class="toggleWrapper">
